<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="android.support.constraint.ConstraintLayout">


    <ImageView
        android:id="@+id/pickUpPlanetImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/pick_up_planet_picture_content_description"
        app:layout_constraintBottom_toTopOf="@id/headerSeparationGuideline"
        app:layout_constraintEnd_toStartOf="@id/pickUpPlanetEndGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@color/warm_grey" />

    <ImageView
        android:id="@+id/dropOffPlanetImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/drop_off_planet_picture_content_description"
        app:layout_constraintBottom_toTopOf="@id/headerSeparationGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dropOffPlanetStartGuideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@color/color_accent" />

    <android.support.constraint.Guideline
        android:id="@+id/dropOffPlanetStartGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.26" />

    <android.support.constraint.Guideline
        android:id="@+id/pickUpPlanetEndGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <android.support.constraint.Guideline
        android:id="@+id/headerSeparationGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".35" />

    <android.support.constraint.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_medium" />

    <android.support.constraint.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_medium" />

    <ImageView
        android:id="@+id/pilotAvatarImageView"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:contentDescription="@string/pilot_avatar_content_description"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/headerSeparationGuideline"
        tools:src="@color/warm_grey" />

    <TextView
        android:id="@+id/pilotNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.31"
        android:lineSpacingExtra="-6sp"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_xlarge"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/pilotAvatarImageView"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/pilotAvatarImageView"
        app:layout_constraintTop_toTopOf="@id/pilotAvatarImageView"
        tools:text="DARTH VADER" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/bg_separator"
        app:layout_constraintTop_toBottomOf="@id/pilotAvatarImageView" />

    <android.support.constraint.Guideline
        android:id="@+id/middleGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/pickUpLabel"
        style="@style/DetailLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_small"
        android:text="@string/pick_up_label"
        app:layout_constraintEnd_toStartOf="@id/middleGuideline"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/separator" />

    <TextView
        android:id="@+id/pickUpPlanetNameTextView"
        style="@style/DetailValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/margin_small"
        app:layout_constraintEnd_toStartOf="@id/middleGuideline"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/pickUpLabel"
        tools:text="NABOO" />

    <TextView
        android:id="@+id/pickUpTimeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.19"
        android:textColor="@color/warm_grey"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/middleGuideline"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/pickUpPlanetNameTextView"
        tools:text="2:12 PM" />

    <TextView
        android:id="@+id/dropOffLabel"
        style="@style/DetailLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/drop_off_label"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/middleGuideline"
        app:layout_constraintTop_toBottomOf="@id/separator" />

    <TextView
        android:id="@+id/dropOffPlanetNameTextView"
        style="@style/DetailValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/middleGuideline"
        app:layout_constraintTop_toBottomOf="@id/dropOffLabel"
        tools:text="YAVIN 4" />

    <TextView
        android:id="@+id/dropOffTimeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.19"
        android:textColor="@color/warm_grey"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/middleGuideline"
        app:layout_constraintTop_toBottomOf="@id/dropOffPlanetNameTextView"
        tools:text="2:12 PM" />

    <TextView
        android:id="@+id/tripDistanceLabelTextView"
        style="@style/DetailLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_small"
        android:text="@string/trip_distance_label"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@id/middleGuideline"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/pickUpTimeTextView" />

    <TextView
        android:id="@+id/tripDistanceTextView"
        style="@style/DetailValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/margin_small"
        android:singleLine="true"
        android:ellipsize="end"
        app:layout_constraintEnd_toStartOf="@id/middleGuideline"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/tripDistanceLabelTextView"
        tools:text="2,111,111 KM" />

    <TextView
        android:id="@+id/tripDurationLabelTextView"
        style="@style/DetailLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/trip_duration_label"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/middleGuideline"
        app:layout_constraintTop_toBottomOf="@id/dropOffTimeTextView" />

    <TextView
        android:id="@+id/tripDurationTextView"
        style="@style/DetailValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/middleGuideline"
        app:layout_constraintTop_toBottomOf="@id/tripDistanceLabelTextView"
        tools:text="5:10:11" />

    <TextView
        android:id="@+id/pilotRatingLabelTextView"
        style="@style/DetailLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_small"
        android:text="@string/pilot_rating"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@id/middleGuideline"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/tripDistanceTextView" />

    <TextView
        android:id="@+id/noRatingTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="@dimen/margin_small"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.21"
        android:text="@string/no_rating_yet"
        android:textAllCaps="true"
        android:textColor="@color/warm_grey"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/pilotRatingLabelTextView"
        tools:visibility="gone" />

    <com.remipradal.starwars.common.RatingView
        android:id="@+id/ratingView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:emptyStarDrawable="@drawable/ic_star_empty_40dp"
        app:filledStarDrawable="@drawable/ic_star_filled_40dp"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/pilotRatingLabelTextView" />
</merge>