<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <ImageView
        android:id="@+id/pilotAvatarImageView"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/pilot_avatar_content_description"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@color/warmGrey" />

    <TextView
        android:id="@+id/pilotNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.31"
        android:lineSpacingExtra="-6sp"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/pilotAvatarImageView"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/pilotAvatarImageView"
        app:layout_constraintTop_toTopOf="@id/pilotAvatarImageView"
        tools:text="DARTH VADER" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_separator"
        app:layout_constraintTop_toBottomOf="@id/pilotAvatarImageView" />

    <android.support.constraint.Guideline
        android:id="@+id/middleGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/pickUpLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="0.7sp"
        android:text="@string/pick_up_label"
        android:textColor="@color/warmGrey"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@id/middleGuideline"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/separator" />

    <TextView
        android:id="@+id/pickUpPlanetNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.19"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/middleGuideline"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/pickUpLabel"
        tools:text="YAVIN 4" />

    <TextView
        android:id="@+id/pickUpTimeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.19"
        android:textColor="@color/warmGrey"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/middleGuideline"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/pickUpPlanetNameTextView"
        tools:text="2:12 PM" />

    <TextView
        android:id="@+id/dropOffLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="0.7sp"
        android:text="@string/drop_off_label"
        android:textColor="@color/warmGrey"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/middleGuideline"
        app:layout_constraintTop_toBottomOf="@id/separator" />

    <TextView
        android:id="@+id/dropOffPlanetNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.19"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/middleGuideline"
        app:layout_constraintTop_toBottomOf="@id/dropOffLabel"
        tools:text="YAVIN 4" />

    <TextView
        android:id="@+id/dropOffTimeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.19"
        android:textColor="@color/warmGrey"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/middleGuideline"
        app:layout_constraintTop_toBottomOf="@id/dropOffPlanetNameTextView"
        tools:text="2:12 PM" />

    <TextView
        android:id="@+id/tripDistanceLabelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="0.7sp"
        android:text="@string/trip_distance_label"
        android:textColor="@color/warmGrey"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@id/middleGuideline"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/pickUpTimeTextView" />

    <TextView
        android:id="@+id/tripDistanceTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.19"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/middleGuideline"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/tripDistanceLabelTextView"
        tools:text="2,111,111 KM" />

    <TextView
        android:id="@+id/tripDurationLabelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="0.7sp"
        android:text="@string/trip_duration_label"
        android:textColor="@color/warmGrey"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/middleGuideline"
        app:layout_constraintTop_toBottomOf="@id/dropOffTimeTextView" />

    <TextView
        android:id="@+id/tripDurationTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.19"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/middleGuideline"
        app:layout_constraintTop_toBottomOf="@id/tripDistanceLabelTextView"
        tools:text="5:10:11" />
</android.support.constraint.ConstraintLayout>